# sandboxer

./: .gitignore  .prettierignore  CHANGELOG.md  CONTRIBUTING.md  README.md  lefthook.yml  package.json
.github/workflows/: go.yml  publish-py.yml  publish-ts.yml  publish.yml  release.yml
docs/: reference-go.md  reference-python.md  reference-typescript.md
examples/go/: go.mod
examples/go/async-workflow/: README.md  main.go
examples/go/blaxel-minimal/: README.md  main.go
examples/go/config-from-environment/: README.md  main.go
examples/go/context-timeout/: README.md  main.go
examples/go/daytona-minimal/: README.md  main.go
examples/go/e2b-echo/: README.md  main.go
examples/go/e2b-files/: README.md  main.go
examples/go/e2b-pty/: README.md  main.go
examples/go/fly-machines-minimal/: README.md  main.go
examples/go/handle-unsupported/: README.md  main.go
examples/go/list-sandboxes-filter/: README.md  main.go
examples/go/local-async-command/: README.md  main.go
examples/go/local-attach/: README.md  main.go
scripts/: ensure-ruff.cjs  ensure-ruff.ts  generate-example-readmes.py  generate-example-readmes.ts  ruff-format.cjs  ruff-format.ts  verify-versions.ts  version.ts
sdks/go/: go.mod  sandboxer.go
sdks/go/core/: catalog.go  (+12 more)
sdks/python/: README.md  pyproject.toml
sdks/python/src/sandboxer/: __init__.py  _connect_proto.py  _http_client.py  _retry.py  _util.py  config.py  errors.py  provider.py  registry.py  types.py
sdks/python/src/sandboxer/providers/: __init__.py  blaxel.py  daytona.py  e2b.py  fly_machines.py  local.py  runloop.py
sdks/typescript/: README.md  package.json  tsconfig.json
(+169 files in other folders)
