[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sandboxer"
version = "0.0.0"
description = "Unified sandbox SDK for multiple cloud providers"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[tool.hatch.build.targets.wheel]
packages = ["src/sandboxer"]

[tool.ruff]
line-length = 120
target-version = "py310"
