[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hyperterse-sandboxer"
version = "0.1.0"
description = "Unified sandbox client for E2B, Daytona, Blaxel, Runloop, Fly Machines, and local Docker"
readme = "README.md"
license = "Apache-2.0"
keywords = [
  "ai-agents",
  "agent-sdk",
  "automation",
  "blaxel",
  "ci-cd",
  "cloud",
  "cloud-sandbox",
  "daytona",
  "developer-tools",
  "devtools",
  "docker",
  "e2b",
  "fly-machines",
  "go",
  "local-sandbox",
  "multi-provider",
  "nodejs",
  "python",
  "remote-sandbox",
  "runloop",
  "sandbox",
  "sandbox-sdk",
  "sdk",
  "typescript",
  "unified-api",
  "unified-sdk",
]
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[tool.hatch.build.targets.wheel]
packages = ["src/sandboxer"]

[tool.ruff]
line-length = 120
target-version = "py310"
